	socklnd   - kernels up to 2.6.16
	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1 and 1.2
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0
	iiblnd    - Infiniserv 3.3 + PathBits patch
	gmlnd     - GM 2.1.22 and later
	mxlnd     - MX 1.2.1 or later
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
       * bug fixes

Severity   : major
Bugzilla   : 10916
Description: added LNET self test
Details    : landing b_self_test

Severity   : minor
Frequency  : rare
Bugzilla   : 12227
Description: cfs_duration_{u,n}sec() wrongly calculate nanosecond part of
	     struct timeval.
Details    : do_div() macro is used incorrectly.

2007-04-23  Cluster File Systems, Inc. <info@clusterfs.com>

Severity   : normal
Bugzilla   : 11680
Description: make panic on lbug configurable

Severity   : major
Bugzilla   : 12316
Description: Add OFED1.2 support to o2iblnd
Details    : o2iblnd depends on OFED's modules, if out-tree OFED's modules
             are installed (other than kernel's in-tree infiniband), there
             could be some problem while insmod o2iblnd (mismatch CRC of 
             ib_* symbols).
             If extra Module.symvers is supported in kernel (i.e, 2.6.17),
             this link provides solution:
             https://bugs.openfabrics.org/show_bug.cgi?id=355
             if extra Module.symvers is not supported in kernel, we will
             have to run the script in bug 12316 to update
             $LINUX/module.symvers before building o2iblnd.
             More details about this are in bug 12316.

------------------------------------------------------------------------------

2007-04-01  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.10 / 1.6.0
       * Support for networks:
	socklnd   - kernels up to 2.6.16
	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later